--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -11,31 +11,31 @@
   <br>
   <br>
   <div class="row">
-    <div class="col-md-7">
+    <div class="col-sm-7">
       <h2 class="featurette-heading">Consultez et votez pour les propositions de votre ville <i class="material-icons" style="font-size: 35px">how_to_vote</i>
       <p class="lead">Chaque jour des citoyens des votre ville postent des propositions pour améliorer le quotidien de la ville. Consultez et débattez des propositions ensemble !</p>
     </div>
-    <div class="col-md-5">
+    <div class="col-sm-5">
       <img class="my-img" src="https://images.unsplash.com/photo-1516321497487-e288fb19713f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" >
     </div>
   </div>
   <br><br>
   <div class="row">
-    <div class="col-md-5">
+    <div class="col-sm-5">
       <img class="my-img" src="https://images.unsplash.com/photo-1550418290-a8d86ad674a6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" >
     </div>
-    <div class="col-md-7">
+    <div class="col-sm-7">
       <h2 class="featurette-heading">Proposez des idées sur des thèmes qui vous inspirent <i class="material-icons" style="font-size: 35px">wb_incandescent</i></h2>
       <p class="lead">Une idée vous inspire depuis longtemps ? Sur Agora, vous êtes libres de proposer vos idées pour la ville. Nous veillons à ce que les propositions les plus pertinentes soient présentes.</p>
     </div>
   </div>
   <br><br>
   <div class="row">
-    <div class="col-md-7">
+    <div class="col-sm-7">
       <h2 class="featurette-heading">Sélectionnez les meilleures idées ensemble et agissez ! <i class="material-icons" style="font-size: 35px">people</i></h2>
       <p class="lead">Sur Agora, le système de vote permet de faire ressortir les meilleures propositions. Ensemble, unissez-vous pour faire avancer les choses!</p>
     </div>
-    <div class="col-md-5">
+    <div class="col-sm-5">
       <img class="my-img" src="https://images.unsplash.com/photo-1543269865-cbf427effbad?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" >
     </div>
   </div>
