--- a/app/views/proposals/new.html.erb
+++ b/app/views/proposals/new.html.erb
@@ -20,7 +20,7 @@
           <label class="col-sm-1 label-on-left"></label>
           <div class="col-sm-9">
             <div class="form-group label-floating">
-              <%= f.label :purpose, "Pourquoi souhaitez vous lancer cette initiative? A quel problème souhaitez-vous répondre?" %>  
+              <%= f.label :purpose, "Pourquoi souhaitez vous lancer cette initiative ? A quel problème souhaitez-vous répondre?" %>  
               <%= f.text_area :purpose, rows: 2, autofocus: true, autocomplete: "purpose", class: "form-control" %>
             </div>
           </div>
@@ -38,11 +38,24 @@
           <label class="col-sm-1 label-on-left"></label>
           <div class="col-sm-9">
             <div class="form-group label-floating">
-              <%= f.label :description, " Expliquez votre proposition! N'hésitez pas à donner des détails ;-)" %>  
+              <%= f.label :description, "Expliquez votre proposition! N'hésitez pas à donner des détails." %>  
               <%= f.text_area :description, rows: 5, autofocus: true, autocomplete: "description", class: "form-control" %>
             </div>
           </div>
         </div>
+        <div class="row">
+          <label class="col-sm-1 label-on-left"></label>
+          <div class="col-sm-3">
+            <div class="label-floating">
+              <%= f.label :picture, "Image *" %>  
+            </div>
+              <%= f.file_field :picture, class: "btn btn-sm btn-info" %>
+          </div>
+          <div class='col-sm-6'>
+            <img class="my-img" src="<%= asset_path('city.jpeg') %>" alt="">
+          </div>
+        </div>
+        <br>
         <div class="card-footer text-center">
           <button type="submit" class="btn btn-primary btn-fill">Créer Proposition</button>
         </div>
