--- a/app/views/proposals/new.html.erb
+++ b/app/views/proposals/new.html.erb
@@ -1,67 +1,84 @@
 <br>
 <div class = container>
-<div class="col-md-12">
-  <div class="card">
-    <%= form_for @proposal do |f| %>
-      <div class="card-header card-header-text" data-background-color="blue">
-        <h4 class="card-title">Proposez une initiative à <%= @city %></h4>
-      </div>
-      <div class="card-content">
-        <div class="row">
-          <label class="col-sm-1 label-on-left"></label>
-          <div class="col-sm-9">
-            <div class="form-group label-floating">
-              <%= f.label :title, "Donnez un titre à votre proposition" %>   
-              <%= f.text_field :title, autofocus: true, autocomplete: "title", class: "form-control" %>
+  <div class="col-md-12">
+    <div class="card">
+      <%= form_for @proposal do |f| %>
+        <div class="card-header card-header-text" data-background-color="blue">
+          <h4 class="card-title">Proposez une initiative à <%= @city %></h4>
+        </div>
+        <div class="card-content">
+          <div class="row">
+            <label class="col-sm-1 label-on-left"></label>
+            <div class="col-sm-9">
+              <div class="form-group label-floating">
+                <%= f.label :title, "Donnez un titre à votre proposition. *" %>   
+                <%= f.text_field :title, autofocus: true, autocomplete: "title", class: "form-control" %>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="row">
-          <label class="col-sm-1 label-on-left"></label>
-          <div class="col-sm-9">
-            <div class="form-group label-floating">
-              <%= f.label :purpose, "Pourquoi souhaitez vous lancer cette initiative ? A quel problème souhaitez-vous répondre?" %>  
-              <%= f.text_area :purpose, rows: 2, autofocus: true, autocomplete: "purpose", class: "form-control" %>
+          <div class="row">
+            <label class="col-sm-1 label-on-left"></label>
+            <div class="col-sm-9">
+              <div class="form-group label-floating">
+                <%= f.label :purpose, "Pourquoi souhaitez vous lancer cette initiative ? A quel problème souhaitez-vous répondre ? *" %>  
+                <%= f.text_area :purpose, rows: 2, autofocus: true, autocomplete: "purpose", class: "form-control" %>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="row">
-          <label class="col-sm-1 label-on-left"></label>
-          <div class="col-sm-9">
-            <div class="form-group label-floating">
-            <%= f.label :category_id, "Choisissez votre categorie : " %>
-              <%= collection_select(:proposal, :category_id, Category.all, :id, :name, prompt: true) %> 
+          <div class="row">
+            <label class="col-sm-1 label-on-left"></label>
+            <div class="col-sm-9">
+              <div class="form-group label-floating">
+                <%= f.label :category_id, "Choisissez votre categorie. *" %>
+                <%= collection_select(:proposal, :category_id, Category.all, :id, :name, prompt: true) %> 
+              </div>
             </div>
           </div>
-        </div>
-        <div class="row">
-          <label class="col-sm-1 label-on-left"></label>
-          <div class="col-sm-9">
-            <div class="form-group label-floating">
-              <%= f.label :description, "Expliquez votre proposition! N'hésitez pas à donner des détails." %>  
-              <%= f.text_area :description, rows: 5, autofocus: true, autocomplete: "description", class: "form-control" %>
+          <div class="row">
+            <label class="col-sm-1 label-on-left"></label>
+            <div class="col-sm-9">
+              <div class="form-group label-floating">
+                <%= f.label :description, "Expliquez votre proposition ! N'hésitez pas à donner des détails. *" %>  
+                <%= f.text_area :description, rows: 5, autofocus: true, autocomplete: "description", class: "form-control" %>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="row">
-          <label class="col-sm-1 label-on-left"></label>
-          <div class="col-sm-3">
-            <div class="label-floating">
-              <%= f.label :picture, "Image *" %>  
-            </div>
+          <div class="row">
+            <label class="col-sm-1 label-on-left"></label>
+            <div class="col-sm-3">
+              <div class="label-floating">
+                <%= f.label :picture, "Associez une belle image à ta proposition. *" %>  
+              </div>
               <%= f.file_field :picture, class: "btn btn-sm btn-info" %>
+            </div>
+            <div class='col-sm-6'>
+              <img id = 'picture' class="my-img" src="" alt="">
+            </div>
           </div>
-          <div class='col-sm-6'>
-            <img class="my-img" src="<%= asset_path('city.jpeg') %>" alt="">
+          <br>
+          <div class="card-footer text-center">
+            <button type="submit" class="btn btn-primary btn-fill">Créer Proposition</button>
           </div>
         </div>
-        <br>
-        <div class="card-footer text-center">
-          <button type="submit" class="btn btn-primary btn-fill">Créer Proposition</button>
-        </div>
-      </div>
-    <% end %>
+      <% end %>
     </div>
   </div>
 </div>
 </div>
+
+<script>
+  let file_field = $('#proposal_picture');
+  file_field.change(() => {
+      let file_field_input = file_field[0];
+      if (file_field_input.files && file_field_input.files[0]) {
+        let reader = new FileReader();
+        
+        reader.onload = function (e) {
+          console.log('load');
+          $('#picture').attr('src', e.target.result);
+        };
+      
+        reader.readAsDataURL(file_field[0].files[0]);
+    };
+  })
+</script>
