--- a/app/views/proposal_mailer/send_email_after_votes.html.erb
+++ b/app/views/proposal_mailer/send_email_after_votes.html.erb
@@ -6,7 +6,8 @@
   <body>
     <h1>Salut <%= @user.first_name %> !</h1>
 
-    
+    <p>Cet email t'informe que ta proposition a été validée par la communauté. Tu peux désormais te rendre sur <%= @url %> pour la consulter et répondre aux commentaires des autres utilisateurs.
+ </p>
 
 <p> Voici les votants : </p>
     <% @votes.each do |vote|%>
@@ -15,14 +16,13 @@
 
 
    
-<p>Cet email t'informe que ta proposition a été validée par la communauté. Tu peux désormais te rendre sur <%= @url %> pour la consulter et répondre aux commentaires des autres utilisateurs.
- </p>
+
  <p>
      Encore bravo pour ta super idée et à très vite sur Agora !
     </p>
 
 
-   <p> L'équipe Agora <p> 
+   <p> L'équipe Agora. <p> 
 
   </body>
 </html>
