--- a/app/views/proposal_mailer/send_email_after_votes.text.erb
+++ b/app/views/proposal_mailer/send_email_after_votes.text.erb
@@ -2,7 +2,12 @@ Mise en relation avec les utilisateur ayant votés pour votre proposition
 
 ========================================================
 
-Cet email t'informe que ta proposition a été validée par la communauté. Tu peux désormais te rendre sur <%= @url %> pour la consulter et répondre aux commentaires des autres utilisateurs.
+                                    Salut <%= @user.first_name %> !
+
+Cet email t'informe que ta proposition a été validée par la communauté. Tu peux désormais contacter les citoyens ayant votés pour ta proposition pour t'organiser avec eux.
+Voici les votants :
  <% @votes.each do |vote|%>
-Voici les votants : <%= vote.user.email%> 
+ <%= vote.user.email%> 
 <%end %>
+
+L'équipe Agora.
