--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -90,6 +90,9 @@
                           <a class="btn btn-primary btn-round btn-sm" href= "/proposals/<%=x.id%>" role="button">
                             <i class="material-icons" style="font-size: 15px">visibility</i> Voir la proposition
                           </a>
+                          <a class="btn btn-primary btn-round btn-sm" href= "/proposals/<%=x.id%>" role="button">
+                            <i class="material-icons" style="font-size: 15px">mode_comment</i> <%=x.comments.count%>
+                          </a>
                           <span class="badge badge-primary"><%= x.category.name %></span>
                         </td>
                           <td class='text-center'>
@@ -120,7 +123,7 @@
   <div class="container">
     <% if @numthen == 0 %>
       <div class='no-proposal'>
-        <h3> Pas de proposition terminé à <%= @city.name %> pour le moment. </h3>
+        <h3> Pas de proposition terminée à <%= @city.name %> pour le moment. </h3>
       </div>
     <%else%>
       <h3>Les propositions passées :</h3>
@@ -151,7 +154,6 @@
                         </a>
                         <span class="badge badge-primary"><%= x.category.name %></span>
                       </td>
-<<<<<<< HEAD
                       <%if x.votes_count <= 100 %>
                          <%if x.vote_of(current_user)%>
                            <td>
@@ -169,8 +171,6 @@
                            <button class="btn btn-warning">VOTES CLOS</button>
                         </td>   
                       <%end%>
-=======
->>>>>>> master
                       <td><td>
                     </tr>
                     <%else%>
