--- a/app/views/proposals/show.html.erb
+++ b/app/views/proposals/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <br>
-  <h3>La proposition</h3>
+  <h3><b>La proposition</b></h3>
   <div class="row">
     <div class="col-md-6 text-wrap text-justify">
       <div class="card card-product">
@@ -70,7 +70,7 @@
                 <p class='text-muted'> Il reste : <%= ((t.to_i)/(60*60*24)).abs %> jours pour voter</p>
                 <h5 class="text-muted">Votez pour cette proposition</h5>
                 <%if @proposal.vote_of(current_user)%>
-                  <%= link_to '<i class="material-icons" style="font-size: 19px">how_to_vote</i> A voté'.html_safe, proposal_vote_path(@proposal.id, @proposal.vote_of(current_user).id), :class => "btn btn-success", method: :delete %>
+                  <%= link_to '<i class="material-icons" style="font-size: 19px">sentiment_satisfied_alt</i> A voté'.html_safe, proposal_vote_path(@proposal.id, @proposal.vote_of(current_user).id), :class => "btn btn-success", method: :delete %>
                 <%else%>
                   <%= link_to '<i class="material-icons" style="font-size: 19px">how_to_vote</i> Je vote'.html_safe, proposal_votes_path(@proposal.id), :class => "btn btn-primary", method: :post %>
               <% end %>
@@ -106,12 +106,12 @@
 
 <div class = container>
 <br>
-<h3><b>Espace débat</b></h3><br>
+<h3><b>L'espace débat</b></h3><br>
 <%if user_signed_in?%>
   <%= form_tag url_for(proposal_comments_path(@proposal.id)) do %> 
     <%= label_tag "Que pensez-vous de cette proposition?" %>
-    <%= text_field_tag 'title',"", {class: 'form-control border'}%>
-    <%= submit_tag "Envoyer", {class: 'btn btn-primary text-right'} %>
+    <p><%= text_field_tag 'title',"", {class: 'form-control border'} %></p>
+    <%=submit_tag "Envoyer", {class: 'btn btn-primary text-right'}%>
   <%end%>
  <%else%>
   <p>Pensez à vous connecter pour participer au débat ;)</p>
@@ -125,6 +125,9 @@
               <b>
               <div class="avatar">
                 <i class="material-icons" style="font-size: 17px">face</i> <%=" "%><%=x.user.first_name%><%=" "%><%=x.user.last_name%>
+                <%if x.user.id == x.proposal.user.id%>
+                  <span class="badge badge-primary">Initiateur</span>
+                <%end%>
               </div>
               </b><br>
               <p><%=x.content%></p>
