--- a/app/views/additional_views/faq.html.erb
+++ b/app/views/additional_views/faq.html.erb
@@ -8,39 +8,58 @@
           <div class="col-md-4">
               <ul class="nav nav-pills nav-pills-blue nav-stacked">
                   <li class="active">
+                    <a href="#tab0" data-toggle="tab">à quoi sert Agora ?</a>
+                  </li>
+                  <li>
                     <a href="#tab1" data-toggle="tab">Qui peut s'inscire sur Agora ?</a>
                   </li>
                   <li>
                     <a href="#tab2" data-toggle="tab">Combien de fois puis-je voter ?</a>
                   </li>
                   <li>
-                    <a href="#tab3" data-toggle="tab">Que se passe-t-il une fois ma proposition validée ?</a>
+                    <a href="#tab3" data-toggle="tab">Que se passe-t-il une fois ma proposition validée sur Agora ?</a>
                   </li>
                   <li>
-                    <a href="#tab4" data-toggle="tab">Comment faire valider ma porposition ?</a>
+                    <a href="#tab4" data-toggle="tab">Comment faire valider ma proposition dans ma ville ?</a>
                   </li>
                   <li>
                     <a href="#tab5" data-toggle="tab">Ma proposition est-elle directetement acceptée dans ma ville ?</a>
                   </li>
                   <li>
-                    <a href="#tab6" data-toggle="tab">Puis-je financer mon projet ?</a>
+                    <a href="#tab6" data-toggle="tab">Puis-je faire financer mon projet ?</a>
                   </li>
                   <li>
-                    <a href="#tab7" data-toggle="tab">Qui peut avoir accès à mes données ?</a>
+                    <a href="#tab7" data-toggle="tab">Qui peut avoir accès à mes données personnelles ?</a>
                   </li>
               </ul>
           </div>
           <div class="col-md-6">
             <div class="tab-content">
-              <div class="tab-pane active" id="tab1">
+              <div class="tab-pane active" id="tab0">
+                <div class="card">
+                  <div class="card-header">
+                    <h4 class="card-title">Agora est une plate-forme qui favorise la prise d'initiative citoyenne.</h4>
+                  </div>
+                  <div class="card-content">
+                    <h5>
+                      Vous avez une idée pour améliorer votre ville ? Vous pouvez soumettre cette idée sur ce site.
+                      Tous les habitants de votre ville inscrits sur Agora pourront la voir, y apporter des remarques et même voter pour elle. 
+                      <br /><br /> 
+                      Nous considérons qu'une proposition ayant atteint 100 votes est une proposition pertinente. Elle est donc validée sur Agora.
+                    </h5>
+                  </div>
+                </div>
+              </div>
+              <div class="tab-pane" id="tab1">
                 <div class="card">
                   <div class="card-header">
                     <h4 class="card-title">Tout citoyen français peut s'inscrire.</h4>
                   </div>
                   <div class="card-content">
-                    <h5>En revanche, tout le monde ne peut pas faire de proposition à sa ville.
-                      <br />
-                      <br /> Il faut être majeur pour pouvoir proposer un projet à sa mairie. 
+                    <h5>
+                      En revanche, tout le monde ne peut pas faire de proposition à sa ville.
+                      <br /><br /> 
+                      Il faut être majeur pour pouvoir proposer un projet à sa mairie. 
                       Cependant, les moins de 18 ans peuvent quand même créer leur proposition afin donner de la visibilité à leur projet.
                     </h5>
                   </div>
@@ -49,12 +68,11 @@
               <div class="tab-pane" id="tab2">
                 <div class="card">
                   <div class="card-header">
-                    <h4 class="card-title">Le nombre de vote est limité a 5 par semaine.</h4>
+                    <h4 class="card-title">Vous pouvez voter seulement une fois chaque proposition.</h4>
                   </div>
                   <div class="card-content">
                     <h5>
-                      A vérifier.
-                      <br />
+                      Vous pouvez également voter pour toute proposition que vous jugeriez pertinente.
                       <br /> 
                     </h5>
                   </div>
@@ -69,8 +87,8 @@
                     <h5>
                       Ce mail contient des liens utiles qui vous permettront de mettre en place votre projet.
                       Vous pouvez également vous rendre sur le site de votre vite et vous rendre dans la rubrique "Appel à projet".
-                      <br />
-                      <br /> La liste des citoyens ayant voté pour votre idée vous sera également envoyée. 
+                      <br /><br /> 
+                      La liste des citoyens ayant voté pour votre idée vous sera également envoyée. 
                       De ce fait, vous pourrez entrer en contact avec eux afin de déployer votre projet, ensemble.
                     </h5>
                   </div>
@@ -79,12 +97,12 @@
               <div class="tab-pane" id="tab4">
                 <div class="card">
                   <div class="card-header">
-                    <h4 class="card-title">Il faut monter un dossier auprés de votre mairie où de l'institution compétente.</h4>      
+                    <h4 class="card-title">Il faut monter un dossier auprès de votre mairie où de l'institution compétente.</h4>      
                   </div>
                   <div class="card-content">
                     <h5>
                       Le dossier doit contenir tout les prérequis demandés par votre mairie. 
-                      Un lien avec toutes les explications vous sera envoyé lorsque votre proposition sera validée.
+                      Un lien avec toutes les explications vous sera envoyé lorsque votre proposition sera validée sur Agora.
                       <br />
                       <br />Nous ne pouvons garantir que votre proposition soit retenue dans votre ville, même avec 100 votes. 
                     </h5>
@@ -98,10 +116,10 @@
                   </div>
                   <div class="card-content">
                     <h5>
-                      Agora est une plate-forme vous permettant de créer une propostion et de trouver des adhérents.
-                      Votre proposition ne sera effective qu'aprés validation auprés de l'institution compétente de votre ville.  
-                      <br />
-                      <br />Une proposition validée sur Agora peut être rejetée dans votre ville. 
+                      Agora est un service en ligne qui vous permet de gagner en visibilité, et facilite le recrutement d'adhérents.
+                      Votre proposition ne sera effective qu'aprés validation auprès de l'institution compétente de votre ville.  
+                      <br /><br />
+                      Une proposition validée sur Agora peut être rejetée dans votre ville. 
                     </h5>
                   </div>
                 </div>
@@ -114,8 +132,8 @@
                   <div class="card-content">
                     <h5>
                       Budget participatif, financement de l'état ou de la mairie... il existe une multitude de financements.
-                      <br />
-                      <br />Le financement dépend du type de votre proposition.
+                      <br /><br />
+                      Le financement dépend du type de votre proposition.
                     </h5>
                   </div>
                 </div>
@@ -123,12 +141,12 @@
               <div class="tab-pane" id="tab7">
                 <div class="card">
                   <div class="card-header">
-                    <h4 class="card-title">Seul Agora peut accèder à vos données. Celles-ci sont protégées.</h4>       
+                    <h4 class="card-title">Seul Agora peut accéder à vos données. Celles-ci sont protégées.</h4>       
                   </div>
                   <div class="card-content">
                     <h5>
-                      Seule exception : lorsque vous votez pour une proposition et que celle-ci est validée sur Agora, votre email seulement sera envoyée à l'initiateur de la proposition afin de pouvoir entrer en contact.
-                      Cela est indiquée dans la charte, lors de votre inscription.
+                      Seule exception : lorsque vous votez pour une proposition et que celle-ci est validée sur Agora, votre email sera envoyée à l'initiateur de la proposition afin de pouvoir entrer en contact.
+                      Cela vous est précisé lors de votre inscription.
                       <br />
                     </h5>
                   </div>
