--- a/app/views/proposals/_proposal_vote_informations.html.erb
+++ b/app/views/proposals/_proposal_vote_informations.html.erb
@@ -3,9 +3,8 @@
     <div class="card-content text-center">
       <% unless is_current_user_owner_of?(proposal) %>
         <%if (proposal.differencebetween == false) && proposal.votes_count < 5 %>
-          <% t = (Time.now- (proposal.created_at+(60*60*24*30)))%>
           <h5 class="text-muted" style='margin-bottom: 0px;'>Votez pour cette proposition</h5>
-          <p class='text-muted' style='font-style: italic; margin-top: 0px'> Il reste : <%= ((t.to_i)/(60*60*24)).abs %> jours pour voter</p>
+          <p class='text-muted' style='font-style: italic; margin-top: 0px'> Il reste : <%= proposal.lifetime %> jours pour voter</p>
           <%if proposal.vote_of(current_user)%>
             <%= link_to '<i class="material-icons" style="font-size: 19px">sentiment_satisfied_alt</i> A voté'.html_safe, proposal_vote_path(proposal.id, proposal.vote_of(current_user).id), :class => "btn btn-success", method: :delete, remote: true %>
           <%else%>
