--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -155,7 +155,7 @@
             <h4 class="card-title">Marie Brun</h4>
             <h6 class="category">@mariebrun</h6>
           <div class="card-avatar">
-            <%= image_tag("alexis.jpg", style: "width: 100%;height: auto") %>
+            <%= image_tag("marie.jpg", style: "width: 100%;height: auto") %>
           </div>
           </div>
         </div>
