--- a/app/views/proposals/_proposal_vote_informations.html.erb
+++ b/app/views/proposals/_proposal_vote_informations.html.erb
@@ -1,7 +1,7 @@
 <div id='proposal-vote-info' class="col">
   <div class="card box" style="padding-bottom: 0px;">
     <div class="card-content text-center">
-      <% unless is_current_user_owner_of?(proposal) || current_user_arent_the_city_of?(proposal) %>
+      <% unless is_current_user_owner_of?(proposal) %>
         <%if (proposal.differencebetween == false) && proposal.votes_count < 5 %>
           <h5 class="text-muted" style='margin-bottom: 0px;'>Votez pour cette proposition</h5>
           <p class='text-muted' style='font-style: italic; margin-top: 0px'> Il reste : <%= proposal.lifetime %> jours pour voter</p>
@@ -16,7 +16,7 @@
               <p>Vous ne pouvez pas voter pour les propositions en dehors de votre ville !</p>
             <%end%> 
           <%else%>
-            <p>Connectez-vous pour pouvoir voter!</p> 
+            <p>Connectez-vous pour pouvoir voter !</p> 
           <%end%>
         <%else%>
           <%if (proposal.differencebetween == true) %>
