--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,3 +1,19 @@
+.text-white-footer img {
+  position: relative;
+  height: auto;
+  width: 50%;
+  margin-top: -3em;
+  margin-bottom: -90px;
+} 
+
+.logo img {
+  position: relative;
+  height: auto;
+  width: 50%;
+  bottom: 23px;
+  margin-left: -1px;
+} 
+
 .logo img {
   position: relative;
   height: auto;
