--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,8 +10,8 @@
       <a class="navbar-brand font-brand logo"  href="/"><%= image_tag("logowhite.png") %> </a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="dropdown drop">
+      <ul class="nav navbar-nav drop">
+        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="material-icons">home</i> Villes disponibles <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <% City.all.each do |city|%>
