--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -165,3 +165,13 @@ background-color: #FFFFFF !important;
   bottom: 15px;
   
 }
+
+.nav-icon {
+  position: relative;
+  bottom: 3px;
+}
+
+.nav-icon-settings {
+  position: relative;
+  bottom: 1px;
+}
