--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -27,8 +27,11 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Bienvenue <%= current_user.first_name%> <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><%= link_to 'Mon profil <i class="material-icons" style="font-size: 19px">person</i>'.html_safe, mon_profil_path, :class => "dropdown-item" %> </li> 
-              <li> <%= link_to 'Se déconnecter <i class="material-icons" style="font-size: 19px">person_remove</i>'.html_safe, destroy_user_session_path, :class => "dropdown-item", method: :delete %></li>
+              <li><%= link_to 'Mon profil <i class="material-icons nav-icon" style="font-size: 19px">person</i>'.html_safe, mon_profil_path, :class => "dropdown-item" %> </li> 
+              <li> <%= link_to 'Se déconnecter <i class="material-icons nav-icon" style="font-size: 19px">person_remove</i>'.html_safe, destroy_user_session_path, :class => "dropdown-item", method: :delete %></li>
+               <% if is_current_user_admin? %>
+              <li><%= link_to 'Dashboard <i class="material-icons nav-icon-settings" style="font-size: 19px">settings</i>'.html_safe, admin_root_path, :class => "dropdown-item" %> </li> 
+               <% end %> 
             </ul>
           </li>
         <% else %>
